@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10001.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10093.tgz',
      'xapian-core.tgz',
-     'f1e61826134092c95ad88f7e922733aa72c323d2',
+     '3bfdf1a369941801c611053f34ddc35494c17759',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10001.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10093.tgz',
      'xapian-bindings.tgz',
-     '299f245108730b94343592d4b815891de98979a8',
+     '2c22cd2475842142906bbc408bdeac946da82c22',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10001.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10093.tgz',
      'win32msvc.tgz',
-     '24c9aa0df6543f79ccb51a25087aa58c016d3974',
+     '1f9e6bb763e39c324a37b6e655188f96192eca20',
      'xapian-core/win32',
     ),
 )
